# kshutdown

./: .editorconfig  CMakeLists.txt  ChangeLog  Doxyfile  README.html  Setup-kde4.sh  Setup-kf5.sh  Setup-qt4-win32.bat  Setup-qt4.bat  Setup-qt4.sh  Setup-qt5.bat  Setup-qt5.sh  Setup-wine.sh  Setup.sh  TODO  VERSION  kshutdown.kdev4  kshutdown.nsh  kshutdown.nsi
po/: CMakeLists.txt  TEMPLATE.pot  ar.po  bg.mo  cs.mo  cs.po  de.po  es.mo  es.po  fr.mo  fr.po  it.po  kshutdown_el.qm  kshutdown_hu.qm  kshutdown_pl.qm  kshutdown_sk.qm  kshutdown_tr.qm  nb.mo  nl.mo  pl.mo  pl.po  pt.po  pt_BR.mo  pt_BR.po  ru.mo  ru.po  sk.po  sr.mo  sr.po  sr@ijekavian.po  sr@ijekavianlatin.po  sr@latin.po  sv.po  zh_CN.po
src/: CMakeLists.txt  bookmarks.cpp  bookmarks.h  commandline.cpp  commandline.h  config.cpp  config.h  infowidget.cpp  infowidget.h  kshutdown-qt.desktop  kshutdown.cpp  kshutdown.desktop  kshutdown.h  kshutdown.notifyrc  kshutdown.qrc  kshutdown.rc  main.cpp  mainwindow.cpp  mainwindow.h  mod.cpp  mod.h  password.cpp  password.h  plugins.cpp  plugins.h  preferences.cpp  preferences.h  progressbar.cpp  progressbar.h  pureqt.h  src.pro  stats.cpp  stats.h  theme.cpp  theme.h  udialog.cpp  udialog.h  usystemtray.cpp  usystemtray.h  utils.cpp  (+2 more)
src/actions/: CMakeLists.txt  bootentry.cpp  bootentry.h  extras.cpp  extras.h  lock.cpp  lock.h  test.cpp  test.h
src/actions/extras/: CMakeLists.txt  unlock-kde.desktop
src/actions/extras/multimedia/: .directory  CMakeLists.txt  amarok.desktop  juk.desktop  kdetv.desktop  kscd.desktop  mplayer.desktop  xmms.desktop
src/actions/extras/system/: .directory  kppp.desktop
src/i18n/: README.txt  kshutdown_bg.qm  kshutdown_cs.qm  kshutdown_da.qm  kshutdown_es.qm  kshutdown_nl.qm  kshutdown_no.qm  kshutdown_pl.qm  kshutdown_pt.qm  kshutdown_pt_BR.qm  kshutdown_ru.qm  kshutdown_sr.qm  kshutdown_sr@ijekavian.qm  kshutdown_sr@ijekavianlatin.qm  kshutdown_sr@latin.qm
src/images/: CMakeLists.txt  kshutdown.svgz
src/themes/dark/: CMakeLists.txt  style.css  theme.xml
src/triggers/: idlemonitor.cpp  idlemonitor.h  processmonitor.cpp  processmonitor.h
tools/: VERSION  check-desktop-files.sh  clang-tidy.sh  cppcheck.sh  i18n.sh  i18nnew.sh  krazy2.sh  make-version.sh  memcheck.sh  package-all.sh  package-zip-source.sh  release.sh  scan-build.sh  test-wine.bat
trunk/kshutdown2/: CMakeLists.txt  ChangeLog  Doxyfile  README.html  Setup-kde4.sh  Setup-kf5.sh  Setup-qt4-win32.bat  Setup-qt4.bat  Setup-qt4.sh  Setup-qt5.bat  Setup-qt5.sh  Setup-wine.sh  Setup.sh  TODO  VERSION  kshutdown.nsh  kshutdown.nsi
trunk/kshutdown2/.kdev4/: kshutdown.kdev4
trunk/kshutdown2/nbproject/: Makefile-Default.mk  Makefile-impl.mk  configurations.xml  project.xml
trunk/kshutdown2/po/: CMakeLists.txt  TEMPLATE.pot  ar.mo  bg.po  cs.po  da.po  de.mo  de.po  el.mo  el.po  es.mo  es.po  fr.mo  fr.po  hu.mo  hu.po  it.mo  it.po  kshutdown_cs.qm  kshutdown_de.qm  kshutdown_es.qm  kshutdown_fr.qm  kshutdown_sv.qm  nb.po  nl.po  no.po  pl.mo  pl.po  pt.po  pt_BR.po  ru.po  sk.mo  sk.po  sr.po  sr@ijekavian.po  sr@ijekavianlatin.po  sr@latin.mo  sr@latin.po  sv.mo  tr.mo  (+3 more)
trunk/kshutdown2/src/: CMakeLists.txt  bookmarks.cpp  bookmarks.h  commandline.cpp  commandline.h  config.cpp  config.h  infowidget.cpp  infowidget.h  kshutdown-qt.desktop  kshutdown.cpp  kshutdown.desktop  kshutdown.h  kshutdown.notifyrc  kshutdown.qrc  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mod.cpp  password.cpp  password.h  plugins.cpp  plugins.h  preferences.cpp  preferences.h  progressbar.cpp  progressbar.h  pureqt.h  src.pro  stats.cpp  stats.h  theme.cpp  theme.h  udialog.cpp  udialog.h  usystemtray.cpp  usystemtray.h  utils.cpp  (+2 more)
trunk/kshutdown2/src/actions/: bootentry.cpp  bootentry.h  extras.cpp  extras.h  lock.cpp  lock.h  test.cpp  test.h
trunk/kshutdown2/src/actions/extras/: CMakeLists.txt  unlock-kde.desktop
trunk/kshutdown2/src/actions/extras/multimedia/: .directory  amarok.desktop  juk.desktop  kaffeine.desktop  kdetv.desktop  kscd.desktop  mplayer.desktop  noatun.desktop  tvtime.desktop  vlc.desktop
trunk/kshutdown2/src/actions/extras/system/: .directory  CMakeLists.txt  adsl-stop.desktop  kdeeject.desktop  kppp.desktop
trunk/kshutdown2/src/i18n/: README.txt  kshutdown_ar.qm  kshutdown_cs.qm  kshutdown_da.qm  kshutdown_de.qm  kshutdown_es.qm  kshutdown_fr.qm  kshutdown_it.qm  kshutdown_nb.qm  kshutdown_pl.qm  kshutdown_pt.qm  kshutdown_pt_BR.qm  kshutdown_ru.qm  kshutdown_sk.qm  kshutdown_sr.qm  kshutdown_sr@ijekavian.qm  kshutdown_sr@ijekavianlatin.qm  kshutdown_sr@latin.qm  kshutdown_zh_CN.qm
trunk/kshutdown2/src/images/: CMakeLists.txt
trunk/kshutdown2/src/themes/dark/: style.css  theme.xml
trunk/kshutdown2/src/triggers/: idlemonitor.cpp  idlemonitor.h  processmonitor.cpp  processmonitor.h
trunk/kshutdown2/tools/: VERSION  api.sh  clang-tidy.sh  cppcheck.sh  flint++.sh  i18n.sh  krazy2.sh  make-version.sh  memcheck.sh  package-all.sh  package-zip-source.sh  release.sh  scan-build.sh  test-wine.bat
